// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneNumberSelectField/> render() should hide phone numbers that have attached integrations 1`] = `
<div>
  <div>
    <div
      class="dropdown"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class=""
        data-toggle="dropdown"
      >
        <div
          class="select dropdown-toggle selectFullWidth"
        >
          <span
            class="label"
            style="min-width: 10px; opacity: 1;"
          >
            <span
              role="img"
              style="display: inline-block; font-size: 20px; line-height: 1em; vertical-align: middle; margin-right: 5px;"
            >
              🇺🇸
            </span>
             
            A Phone Number
             - 
            US
             (
            +1 415 111 2222
            )
          </span>
          <input
            autocomplete="chrome-off"
            class="input"
            id="phoneNumber"
            style="min-width: 10px;"
            type="text"
            value=""
          />
          <i
            class="material-icons dropdownIcon"
          >
            arrow_drop_down
          </i>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="options optionsFullWidth dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        
        <button
          class="option option--focused dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <span>
            <div
              class="createLabel"
            >
              <i
                class="material-icons"
              >
                add
              </i>
              <span>
                Create phone number
              </span>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneNumberSelectField/> render() should hide phone numbers that have don't have the matching capability 1`] = `
<div>
  <div>
    <div
      class="dropdown"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class=""
        data-toggle="dropdown"
      >
        <div
          class="select dropdown-toggle selectFullWidth"
        >
          <span
            class="label"
            style="min-width: 10px; opacity: 1;"
          >
            <span
              role="img"
              style="display: inline-block; font-size: 20px; line-height: 1em; vertical-align: middle; margin-right: 5px;"
            >
              🇺🇸
            </span>
             
            A Phone Number
             - 
            US
             (
            +1 415 111 2222
            )
          </span>
          <input
            autocomplete="chrome-off"
            class="input"
            id="phoneNumber"
            style="min-width: 10px;"
            type="text"
            value=""
          />
          <i
            class="material-icons dropdownIcon"
          >
            arrow_drop_down
          </i>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="options optionsFullWidth dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        
        <button
          class="option option--focused dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <span>
            <div
              class="createLabel"
            >
              <i
                class="material-icons"
              >
                add
              </i>
              <span>
                Create phone number
              </span>
            </div>
          </span>
        </button>
        <button
          class="option dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <span>
            <span
              role="img"
              style="display: inline-block; font-size: 20px; line-height: 1em; vertical-align: middle; margin-right: 5px;"
            >
              🇨🇦
            </span>
             
            Another Phone Number
             - 
            CA
             (
            +1 813 111 2223
            )
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneNumberSelectField/> render() should open a modal form when selecting the create option 1`] = `
<body>
  <div>
    <div>
      <div
        class="dropdown"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class=""
          data-toggle="dropdown"
        >
          <div
            class="select dropdown-toggle selectFullWidth"
          >
            <span
              class="label placeholder"
              style="min-width: 10px; opacity: 1;"
            >
              Select number
            </span>
            <input
              autocomplete="chrome-off"
              class="input"
              id="phoneNumber"
              style="min-width: 10px;"
              type="text"
              value=""
            />
            <i
              class="material-icons dropdownIcon"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="options optionsFullWidth dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          
          <button
            class="option option--focused dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              <div
                class="createLabel"
              >
                <i
                  class="material-icons"
                >
                  add
                </i>
                <span>
                  Create phone number
                </span>
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="modal-2-desc"
    aria-labelledby="modal-2-title"
    aria-modal="true"
    class="modal default"
    role="dialog"
  >
    <div
      class="dialog"
    >
      <div
        class="modalContent default"
      >
        <div
          class="wrapper"
        >
          <div>
            <div
              class="title"
              id="modal-2-title"
            >
              Create Phone Number
            </div>
            <div
              class="subtitle"
            />
          </div>
          <i
            class="material-icons icon"
          >
            close
          </i>
        </div>
        <form
          class=""
        >
          <div
            class="wrapper"
            id="modal-2-desc"
          >
            <div
              class="row"
            >
              <div
                class="col"
              >
                <div
                  class="form-group"
                >
                  <div>
                    <label
                      class="label label"
                      for="input-text-3"
                    >
                      Title
                      <abbr
                        aria-label="required"
                        class="abbr"
                        title="required"
                      >
                        *
                      </abbr>
                    </label>
                    <div
                      class="wrapper"
                    >
                      <input
                        class="input"
                        id="input-text-3"
                        name="input-text-3"
                        placeholder="Ex: Company Support Line"
                        required=""
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col"
                  >
                    <div
                      class="form-group"
                    >
                      <label
                        class="control-label"
                        for="country"
                      >
                        Country
                      </label>
                      <div>
                        <div
                          class="dropdown"
                        >
                          <div
                            aria-expanded="false"
                            aria-haspopup="true"
                            class=""
                            data-toggle="dropdown"
                          >
                            <div
                              class="select dropdown-toggle selectFullWidth"
                            >
                              <span
                                class="label placeholder"
                                style="min-width: 10px; opacity: 1;"
                              >
                                Select an option
                              </span>
                              <input
                                autocomplete="chrome-off"
                                class="input"
                                id="country"
                                required=""
                                style="min-width: 10px;"
                                type="text"
                                value=""
                              />
                              <i
                                class="material-icons dropdownIcon"
                              >
                                arrow_drop_down
                              </i>
                            </div>
                          </div>
                          <div
                            aria-hidden="true"
                            class="options optionsFullWidth dropdown-menu"
                            role="menu"
                            tabindex="-1"
                          >
                            
                            <button
                              class="option option--focused dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                Canada
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                United States
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                Australia
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                United Kingdom
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                France
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="form-group"
                    >
                      <label
                        class="control-label"
                        for="area-code"
                      >
                        Area code
                      </label>
                      <div>
                        <div
                          class="dropdown"
                        >
                          <div
                            aria-expanded="false"
                            aria-haspopup="true"
                            class=""
                            data-toggle="dropdown"
                          >
                            <div
                              class="select dropdown-toggle selectFullWidth"
                            >
                              <span
                                class="label placeholder"
                                style="min-width: 10px; opacity: 1;"
                              >
                                Select an option
                              </span>
                              <input
                                autocomplete="chrome-off"
                                class="input"
                                id="area-code"
                                required=""
                                style="min-width: 10px;"
                                type="text"
                                value=""
                              />
                              <i
                                class="material-icons dropdownIcon"
                              >
                                arrow_drop_down
                              </i>
                            </div>
                          </div>
                          <div
                            aria-hidden="true"
                            class="options optionsFullWidth dropdown-menu"
                            role="menu"
                            tabindex="-1"
                          >
                            <h6
                              class="dropdown-header"
                              tabindex="-1"
                            >
                              No result
                            </h6>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="wrapper wrapper"
          >
            <div
              class="actions"
            >
              <div
                class="childWrapper"
              >
                <button
                  class="wrapper fill primary medium"
                  type="button"
                >
                  Create phone number
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</body>
`;

exports[`<PhoneNumberSelectField/> render() should render 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class=""
      data-toggle="dropdown"
    >
      <div
        class="select dropdown-toggle selectFullWidth"
      >
        <span
          class="label placeholder"
          style="min-width: 10px; opacity: 1;"
        >
          Select number
        </span>
        <input
          autocomplete="chrome-off"
          class="input"
          id="phoneNumber"
          style="min-width: 10px;"
          type="text"
          value=""
        />
        <i
          class="material-icons dropdownIcon"
        >
          arrow_drop_down
        </i>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="options optionsFullWidth dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      
      <button
        class="option option--focused dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span>
          <div
            class="createLabel"
          >
            <i
              class="material-icons"
            >
              add
            </i>
            <span>
              Create phone number
            </span>
          </div>
        </span>
      </button>
    </div>
  </div>
</div>
`;
